[package]
name = "verify-cli"
version = "0.1.0"
edition = "2021"
authors = ["BuyMyMojo <hello@buymymojo.net>"]
description = "A cli tool for getting multiple hashes of a file for quick verification"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
blake3 = "1.3.3"
clap = { version = "4.0.32", features = ["derive"] }
hex = "0.4.3"
md-5 = "0.10.5"
sha1 = "0.10.5"
sha2 = "0.10.6"
sha3 = "0.10.6"
